# college-mgmt

./: docker-compose.yml  pyproject.toml  tree
app/: main.py
app/core/: config.py
app/db/: deps.py  session.py
app/infra/celery/: worker.py
docker/common/: prometheus.yml
docker/dev/: Dockerfile  docker-compose.yml
docker/prod/: Dockerfile  docker-compose.yml
