[tool.poetry]
name = "college-management"
version = "0.1.0"
description = "College Management System with FastAPI"
authors = ["Vijay"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# 🚀 FastAPI stack
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
gunicorn = "^21.2.0"

# 🗄️ Database (MySQL async)
sqlalchemy = "^2.0.29"
asyncmy = "^0.2.9"
alembic = "^1.13.1"

# 🔐 Auth & Security
python-jose = "^3.3.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

# ⚡ Background tasks
celery = "^5.3.6"
redis = "^5.0.3"

# 📡 Kafka
kafka-python = "^2.0.2"

# ⚙️ Config
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"

# 📊 Monitoring
prometheus-client = "^0.20.0"

# 📧 Optional (since you used email service earlier)
email-validator = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
